# scoreman

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.cargo/: config.toml
.github/: flowchart.d2
.github/workflows/: build.yml
input/: bends.tab  c_major.tab  c_major_comments.tab  c_major_regression.tab  invalid_bend.tab  vibrato.tab
src/: cli_args.rs  fs_test.rs  lib.rs  main.rs  raw_tracks.rs
src/backend/: errors.rs  mod.rs
src/backend/errors/: backend_error.rs  backend_error_kind.rs  diagnostic.rs  diagnostic_kind.rs  error_location.rs  mod.rs
src/backend/fixup/: mod.rs
src/backend/format/: mod.rs
src/backend/midi/: mod.rs
src/backend/muxml/: formatters.rs  fretboard.rs  mod.rs  muxml2_tests.rs  settings.rs
src/backend/muxml2/: fretboard.rs  mod.rs  muxml2_formatters.rs  muxml2_tests.rs  settings.rs
src/parser/: mod.rs  parser.rs  parser2.rs  parser3.rs  parser_tests.rs  tab_element.rs
src/parser/snapshots/: guitar_tab__parser__parser2__parse2-2.snap  guitar_tab__parser__parser2__parse2-3.snap  guitar_tab__parser__parser2__parse2-4.snap  guitar_tab__parser__parser2__parse2.snap  guitar_tab__parser__parser3__parse3.snap.new  guitar_tab__parser__parser_tests__bend-2.snap  guitar_tab__parser__parser_tests__bend.snap  guitar_tab__parser__parser_tests__bend_to-2.snap  guitar_tab__parser__parser_tests__bend_to.snap  guitar_tab__parser__parser_tests__bendy_score-2.snap  guitar_tab__parser__parser_tests__bendy_score.snap  guitar_tab__parser__parser_tests__full_bend_score-2.snap  guitar_tab__parser__parser_tests__full_bend_score.snap  guitar_tab__parser__parser_tests__left_bend_score-2.snap  guitar_tab__parser__parser_tests__left_bend_score.snap  guitar_tab__parser__parser_tests__left_bend_score_2.snap  guitar_tab__parser__parser_tests__part.snap  scoreman__parser__parser__parse3-2.snap  (+16 more)
src/snapshots/: guitar_tab__raw_tracks__multichar_raw_tracks.snap  guitar_tab__raw_tracks__multichar_tracks.snap
tools/: benchmark.py  gen_note_lookup.rs  write_large_file.py
(+5 files in other folders)
