[package]
name = "guitar_tab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
gt_trace=[]
gt_debug=[]

[dependencies]
anyhow = "1.0.83"
bilge = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.14.0"
itoa = "1.0.11"
midly = "0.5.3"
ndarray = "0.16.1"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
rustc-hash = "2.0.0"
thiserror = "1.0.60"
yansi = "1.0.1"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "release"
debug = 1
