[package]
name = "scoreman"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
sm_trace = []
sm_debug = []

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.14.0"
itoa = "1.0.11"
midly = "0.5.3"
rustc-hash = "2.1.1"
yansi = "1.0.1"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"

[profile.releaseFat]
inherits = "release"
lto = "fat"


[profile.profiling]
inherits = "release"
debug = 1
